# glslang-rs

./: .gitmodules  Cargo.toml  LICENSE.md  README.md
bindings_generator/: Cargo.toml  build.rs
bindings_generator/src/: callbacks.rs  main.rs
glslang/: Cargo.toml
glslang-sys/: Cargo.toml  build.rs
glslang-sys/native/: wrapper.h
glslang-sys/src/: bindings.rs  lib.rs
glslang/src/: callbacks.rs  ctypes.rs  error.rs  include.rs  input.rs  lib.rs  limits.rs  program.rs  shader.rs
glslang/tests/: basic.glsl
