[package]
name = "glslang-sys"
version = "0.5.2+fa9c3de"
edition = "2021"

authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/glslang-rs"
readme = "../README.md"
categories = ["compilers", "graphics"]
keywords = ["shader", "compiler", "spirv", "glsl", "hlsl"]
links = "glslang"

description = "Raw C bindings to glslang"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
glob = "0.3.1"
cc = {  version = "1.0.104", features = ["parallel"] }
