[package]
name = "glslang"
version = "0.5.3"
edition = "2021"

authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/glslang-rs"
readme = "../README.md"
categories = ["compilers", "graphics"]
keywords = ["shader", "compiler", "spirv", "glsl", "hlsl"]

description = "Rust bindings to glslang"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glslang-sys = { version = "0.6", path = "../glslang-sys" }
thiserror = "1.0"
rustc-hash = "2.0.0"
bitflags = "2.4.2"
smartstring = "1.0.1"

[dev-dependencies]
rspirv = "0.12.0"
